# server/server.js
@@ -7,6 +7,7 @@ const swaggerDocument = require('../swagger.json');
 var {mongoose} = require('./db/mongoose');
 var users = require('../users/users');
 var permissions = require('../permissions/permissions');
+var roles = require('../roles/roles');
 
 var app = express();
 const port = process.env.PORT;
@@ -17,6 +18,7 @@ app.use('/api-docs',
 
 app.use('/users', users);
 app.use('/permissions', permissions);
+app.use('/roles', roles);
 
 app.listen(port, () => {
     console.log(`Started on port ${port}`);
